# bulb

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
assets/Black Ranger/: RngM_S01_T1_black_msh.mtl
shaders/: fragment.slang  vertex.slang
src/: app.cpp  app.cppm  main.cpp  texture_manager.cpp
